--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "react-helmet": "^6.1.0",
         "react-hook-form": "^6.14.0",
         "react-hook-form-input": "^1.1.10",
+        "react-otp-input": "^2.3.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
         "react-select": "^3.1.1",
