--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,14 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@mitchallen/react-loader-button": "^0.1.8",
         "@testing-library/jest-dom": "^5.11.8",
         "@testing-library/react": "^11.2.2",
         "@testing-library/user-event": "^12.6.0",
         "axios": "^0.21.1",
         "bootstrap": "^4.5.3",
         "jquery": "^3.5.1",
+        "material-ui": "^0.20.2",
         "popper.js": "^1.16.1",
         "prop-types": "^15.7.2",
         "react": "^17.0.1",
@@ -22,6 +24,7 @@
         "react-helmet": "^6.1.0",
         "react-hook-form": "^6.14.0",
         "react-hook-form-input": "^1.1.10",
+        "react-icons": "^4.2.0",
         "react-otp-input": "^2.3.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
