--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "gulp-watch": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
+    "moment": "^2.29.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "node": "^12.6.0",
