--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "axios": "^0.21.1",
         "bootstrap": "^4.5.3",
         "jquery": "^3.5.1",
+        "jsonwebtoken": "^8.5.1",
         "material-ui": "^0.20.2",
         "popper.js": "^1.16.1",
         "prop-types": "^15.7.2",
