--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,7 @@
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "node": "^12.6.0",
