--- a/frontend_admin/package.json
+++ b/frontend_admin/package.json
@@ -10,6 +10,7 @@
         "bootstrap": "^4.5.3",
         "jquery": "^3.5.1",
         "jwt-decode": "^3.1.2",
+        "moment-timezone": "^0.5.33",
         "react": "^17.0.1",
         "react-bootstrap": "^1.4.3",
         "react-bootstrap-table-next": "^4.0.3",
