--- a/backend/package.json
+++ b/backend/package.json
@@ -49,6 +49,8 @@
     "nodemailer": "^6.6.0",
     "normalize-scss": "^7.0.1",
     "pug": "^2.0.4",
+    "react-confirm-alert": "^2.7.0",
+    "react-toastify": "^7.0.4",
     "run-sequence": "^2.2.1",
     "session-file-store": "^1.3.0",
     "sleep-promise": "^9.1.0",
