--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
         "jquery": "^3.5.1",
         "jsonwebtoken": "^8.5.1",
         "material-ui": "^0.20.2",
+        "moment": "^2.29.1",
+        "moment-timezone": "^0.5.33",
         "popper.js": "^1.16.1",
         "prop-types": "^15.7.2",
         "react": "^17.0.1",
