--- a/frontend_admin/package.json
+++ b/frontend_admin/package.json
@@ -9,6 +9,7 @@
         "axios": "^0.21.1",
         "bootstrap": "^4.5.3",
         "jquery": "^3.5.1",
+        "json-web-token": "^3.2.0",
         "jwt-decode": "^3.1.2",
         "moment-timezone": "^0.5.33",
         "react": "^17.0.1",
@@ -18,6 +19,7 @@
         "react-bootstrap-table2-overlay": "^2.0.0",
         "react-bootstrap-table2-toolkit": "^2.1.3",
         "react-calendar": "^3.4.0",
+        "react-confirm-alert": "^2.7.0",
         "react-date-picker": "^8.1.1",
         "react-datetime-picker": "^3.2.1",
         "react-dom": "^17.0.1",
