--- a/frontend_admin/package.json
+++ b/frontend_admin/package.json
@@ -16,6 +16,7 @@
         "react-bootstrap": "^1.4.3",
         "react-bootstrap-table-next": "^4.0.3",
         "react-bootstrap-table2-editor": "^1.4.0",
+        "react-bootstrap-table2-filter": "^1.3.3",
         "react-bootstrap-table2-overlay": "^2.0.0",
         "react-bootstrap-table2-toolkit": "^2.1.3",
         "react-calendar": "^3.4.0",
